# krkrz_dev

./: .gitmodules  CMakeLists.txt  CMakePresets.json  HowToBulid.md  Makefile  README.md  README_ORAL.md  README_ZH.md  vcpkg.cmake  vcpkg.json
.github/workflows/: build-windows.yml
src/plugins/: CMakeLists.txt
src/plugins/psbfile/: CMakeLists.txt
src/plugins/win32/: CMakeLists.txt
