cmake_minimum_required(VERSION 3.16)

# UTF-8 source
add_compile_options("$<$<AND:$<C_COMPILER_ID:MSVC>,$<COMPILE_LANGUAGE:C>>:/utf-8>")
add_compile_options("$<$<AND:$<CXX_COMPILER_ID:MSVC>,$<COMPILE_LANGUAGE:CXX>>:/utf-8>")
add_compile_options("$<$<AND:$<CXX_COMPILER_ID:MSVC>,$<COMPILE_LANGUAGE:CXX>>:/Zc:__cplusplus>")

# すべてのプラグインでMT(d)を強制する
set(CMAKE_MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")

# 基本プラグイン
add_subdirectory(tp_stub)
add_subdirectory(ncbind)

# plugins
# add_subdirectory(KAGParserEx)
add_subdirectory(addFont)
add_subdirectory(binaryStream)
add_subdirectory(csvParser)
add_subdirectory(fpslimit)
add_subdirectory(fstat)
add_subdirectory(getSample)
add_subdirectory(httprequest)
add_subdirectory(httpserv)
# add_subdirectory(json)
# add_subdirectory(layerEx)
add_subdirectory(layerExAreaAverage)
add_subdirectory(layerExBTOA)
add_subdirectory(layerExDraw)
add_subdirectory(layerExImage)
add_subdirectory(layerExLongExposure)
add_subdirectory(layerExRaster)
# add_subdirectory(layerExSave)
add_subdirectory(lineParser)
add_subdirectory(memfile)
add_subdirectory(menu)
add_subdirectory(messenger)
# add_subdirectory(minizip)
add_subdirectory(msgreceiver)
add_subdirectory(process)
add_subdirectory(psdfile)
# add_subdirectory(resourceRW)
add_subdirectory(saveStruct)
add_subdirectory(scriptsEx)
add_subdirectory(shellExecute)
add_subdirectory(shrinkCopy)
add_subdirectory(sigcheck)
add_subdirectory(stdio)
add_subdirectory(systemEx)
add_subdirectory(tftSave)
add_subdirectory(varfile)
# add_subdirectory(win32dialog)
add_subdirectory(win32ole)
add_subdirectory(windowEx)
add_subdirectory(windowExProgress)

# 特殊プラグイン
# STEAMプラグインはSDKパスが環境変数で提供された場合のみビルド
if(DEFINED ENV{STEAMWORKS_SDK})
	add_subdirectory(steam)
endif()
